<resources>
    <string name="app_name">MNCH Training</string>
    <string name="gds">General Danger Signs</string>
    <string name="cdb">Cough and Difficult Breathing</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="psbi">Possible Serious Bacterial Infections PSBI (Young Infant)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_new_survey">New Survey</string>
    <string name="title_home">Home</string>
    <string name="rb_yes">Yes</string>
    <string name="rb_No">No</string>
    <string name="rb_dnt">Don\'t Know</string>
    <string-array name="sp_pro">

        <item>Select</item>
        <item>Sindh</item>
        <item>Balochistan</item>
        <item>Punjab</item>

    </string-array>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="default_p">#</string>
    <string name="default_guest_name">Name</string>
    <string name="txt_welecom">
         Assalam o Alaikum\n
        My name is %%Name\n and I am working with Centre of Excellence in Women and Child Health, Aga Khan University Karachi with the collaboration of National Ministry of Health Services, Regulation and Coordination Government of Pakistan and Provincial Health Departments of Balochistan, Punjab and Sindh. I believe the data collector has asked you
        a number of questions regarding maternal and child health. I would like to confirm a few questions for monitoring purposes.

</string>
    <string name="txt_A1">Cluster number</string>
    <string name="txt_A2">Khandan/House Number</string>
    <string name="txt_B1">Latitude</string>
    <string name="txt_B2">Longitude</string>
    <string name="txt_C1">Did the data collector visit your house?</string>
    <string name="txt_C2">Did the data collector greet you when she came?</string>
    <string name="txt_C3">Did the data collector introduce herself?</string>
    <string name="txt_C4">Did the data collector take informed consent?</string>
    <string name="txt_D1">Name of Head of the household</string>
    <string name="txt_D2">Total number of members in the household</string>
    <string name="txt_D3">Total number of eligible women in the household</string>
    <string name="txt_D4">Number of children less than 5 yrs in the HH</string>
    <string name="txt_D5">Name of respondent</string>
    <string name="txt_E1">Total number of pregnancies among the WRAs in the HH</string>
    <string name="txt_E2">Number of children born live in the HH who are still alive</string>
    <string name="txt_E3">God Forbid (Khuda Na Khuwasta), did any woman in your household die in the past five years due to complications related to pregnancy, delivery and 42 days after delivery</string>
    <string name="txt_E4">How many women have died</string>
    <string name="txt_I1">Has any child less than 5 years of age in the household had diarrhea in the last 2 weeks in your household</string>
    <string name="txt_I2">Has any child had an illness with cough that he/she breathes faster than usual with short, rapid breaths or has difficulty breathing in the past two weeks</string>
    <string name="txt_I3">Did any child have do chest x-ray</string>
    <string name="txt_L1">Do you have a separate room which is used as a kitchen</string>
    <string name="txt_L2">How many rooms in this HH are used for sleeping</string>
    <string name="txt_L3">What language do you usually speak in your household</string>
    <string name="rb_L3_1">Urdu </string>
    <string name="rb_L3_2">Punjabi</string>
    <string name="rb_L3_3">Sindhi</string>
    <string name="rb_L3_4">Balochi</string>
    <string name="rb_L3_5">Siraiki</string>
    <string name="rb_L3_6">Barauhi</string>
    <string name="rb_L3_7">Brushaski</string>
    <string name="rb_L3_8">Pashto</string>
    <string name="txt_M1">What is the main source of drinking water for members of your household</string>
    <string name="rb_M1_1">Piped into dwelling</string>
    <string name="rb_M1_2">Piped into compound, yard or plot</string>
    <string name="rb_M1_3">Piped to neighbor</string>
    <string name="rb_M1_4">Public tap / standpipe</string>
    <string name="rb_M1_5">Filtration Plant/unit</string>
    <string name="rb_M1_6">Tube Well, Borehole</string>
    <string name="rb_M1_7">Hand Pump</string>
    <string name="rb_M1_8">Protected well</string>
    <string name="rb_M1_9">Unprotected well</string>
    <string name="rb_M1_10">Rainwater collection</string>
    <string name="rb_M1_11">Tanker-truck</string>
    <string name="rb_M1_12">Cart with small tank / drum</string>
    <string name="rb_M1_13">Surface water (river, stream, dam, lake, pond, canal, irrigation channel)</string>
    <string name="rb_M1_14">Bottled water</string>
    <string name="txt_N1">Do you have any soap or detergent or ash/mud/sand in your house for washing hands</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="classification_table"> <font color='black'><b>CLASSIFICATION TABLES:</b> Signs of illness and their classifications are listed on the ASSESS &amp; CLASSIFY chart in classification tables.  Most classification tables have three rows.
        Each row of classification chart is colored in </font><b>PINK</b><font color='black'>,</font> <font color='yellow'><b>YELLOW</b></font><font color='black'>, or</font> <font color='green'><b>GREEN</b></font><font color='black'>. The color of the row tells you the severity of child’s illness and thus facilitates appropriate treatment.</font></string>
    <string name="severe_persistent_diarrhea">o\tFor <b>SEVERE PERSISTENT DIARRHEA</b> the instruction says simply: \'<b>Refer to hospital</b>\'. This means that referral is needed, but not as urgently. There is time to identify appropriate treatments and give all of the treatments before referral.</string>
    <string name="severe_dehydration">o\tFor <b>SEVERE DEHYDRATION</b>, if that is the child\'s only severe classification and if your clinic has the ability to treat the child, you may keep and treat the child. This child may also have a general danger sign related to dehydration. For example, the child may be lethargic, unconscious, or not able to drink because he or she is severely dehydrated. If you are trained to treat the child according to Plan C (see: <b>TREAT THE CHILD</b>) you may decide to use Plan C to decide whether to refer the child. If the child has another severe classification in addition to <b>SEVERE DEHYDRATION</b>, you should refer the child.</string>
    <string name="severe_disease">o\tChildren who have a general danger sign have a severe classification <b>VERY SEVERE DISEASE</b> and will be referred for their severe classification (or possibly treated if they have <b>SEVERE DEHYDRATION</b> only).</string>
    <string name="sajid">sajid is here</string>
    <string name="sajid1">Who is there let me know: %s"</string>
    <string name="gdspretestq1">1- Children with &gdsq1; on the IMNCI chart usually need urgent referral to hospital.</string>
    <string name="gdspretestq1a1">Mild illness</string>
    <string name="gdspretestq1a11">1- Children with <font color='U_Heavy'><b>Mild illness</b></font> on the IMNCI chart usually need urgent referral to hospital.</string>
    <string name="gdspretestq1a2">Pneumonia</string>
    <string name="gdspretestq1a12">1- Children with <u><i>Pneumonia</i></u> on the IMNCI chart usually need urgent referral to hospital.</string>
    <string name="gdspretestq1a3">Dehydration</string>
    <string name="gdspretestq1a13">1- Children with <u><i>Dehydration</i></u> on the IMNCI chart usually need urgent referral to hospital.</string>
    <string name="gdspretestq1a4">Severe disease/classification</string>
    <string name="gdspretestq1a14">1- Children with <u><i>Severe disease/classification</i></u> on the IMNCI chart usually need urgent referral to hospital.</string>
    <string name="gdspretestq2">2- _________________is the exception for severe classification or severe disease where referral to the hospital is needed but not urgent.</string>
    <string name="gdspretestq2a1">Persistent diarrhea</string>
    <string name="gdspretestq2a21">2- <u><i>Persistent diarrhea</i></u> is the exception for severe classification or severe disease where referral to the hospital is needed but not urgent.</string>
    <string name="gdspretestq2a2">Severe dehydration</string>
    <string name="psbitestq1">1- Skin pustules among young infants are the sign of ____________________.</string>
    <string name="psbitestq1a1"> Jaundice</string>
    <string name="psbitestq1a2"> Local Bacterial Infection</string>
    <string name="psbitestq1a3"> Thrush</string>
    <string name="psbitestq1a4"> Diarrhea</string>
    <string name="psbitestq2">2- The follow-up time for sick young infants with diarrhea and pneumonia is ________ days.</string>
    <string name="psbitestq2a1"> 2nd Day</string>
    <string name="psbitestq2a2"> 3rd Day</string>
    <string name="psbitestq2a3"> 4th Day</string>
    <string name="psbitestq2a4"> 5th Day</string>
    <string name="psbitestq3">3- Persistent vomiting is defined as vomiting following three attempts to feed the infant within ______ minutes, and the infant vomits after each attempt.</string>
    <string name="psbitestq3a1"> 10 minutes</string>
    <string name="psbitestq3a2"> 20 minutes</string>
    <string name="psbitestq3a3"> 30 minutes</string>
    <string name="psbitestq3a4"> 40 minutes</string>
    <string name="psbitestq4">4- Which one of the following is NOT a danger sign for some dehydration in young infants</string>
    <string name="psbitestq4a1">Movement only when stimulated or no movement at all</string>
    <string name="psbitestq4a2">Sunken eyes</string>
    <string name="psbitestq4a3">Skin pinch goes back very slowly.</string>
    <string name="psbitestq4a4">Restless and irritable</string>
    <string name="psbitestq5">5- Pre referral treatment for severe Pneumonia or very severe disease in young infant up to 2 months require first dose of an appropriate _________ antibiotic.</string>
    <string name="psbitestq5a1">Oral</string>
    <string name="psbitestq5a2">Intravenous</string>
    <string name="psbitestq5a3">Intramuscular</string>
    <string name="psbitestq5a4">None of the above</string>
    <string name="psbitestq6">6- What is the correct dose to prepare sugar water?</string>
    <string name="psbitestq6a1">3 level teaspoons of sugar in a 200-ml cup of clean water.</string>
    <string name="psbitestq6a2">4 level teaspoons of sugar in a 200-ml cup of clean water.</string>
    <string name="psbitestq6a3">2 level teaspoons of sugar in a 200-ml cup of clean water.</string>
    <string name="psbitestq6a4">5 level teaspoons of sugar in a 250-ml cup of clean water.</string>
    <string name="psbitestq7">7- What does APAC process mean?</string>
    <string name="psbitestq7a1">Ask, Praise, Assess, Check</string>
    <string name="psbitestq7a2">Assess, Praise, Ask, Counsel</string>
    <string name="psbitestq7a3">Ask, Praise, Advice, Check</string>
    <string name="psbitestq7a4">Assess, Prevent, Advice, Counsel</string>
    <string name="nic_no">Valid CNIC</string>
</resources>