<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/U_Light"
    android:orientation="vertical"
    tools:context=".PSBI.PsbiPreTest">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_mnchmainpsbi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txt_psbimain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_mnchmainpsbi"
            android:layout_centerInParent="true"
            android:text="Possible Serious Bacterial Infection PSBI (Young Infant) "
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/img_psbipretest"
            android:layout_width="90dp"
            android:layout_height="60sp"
            android:layout_alignParentTop="true"
            android:src="@drawable/unwhite" />

        <TextView
            android:id="@+id/txt_psbipretest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5sp"
            android:text="PRE-TEST"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:scrollbarSize="10dip">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- EditText CINIC Starts -->
            <android.support.v7.widget.CardView
                android:id="@+id/cniccv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:id="@+id/ll_cnic"
                    style="@style/Q_Linerlayout_v">

                    <TextView
                        style="@style/TextView"
                        android:text="@string/nic_no" />

                    <com.santalu.widget.MaskEditText
                        android:id="@+id/ed_cnic_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/nic_no"
                        android:inputType="date"
                        app:met_mask="#####-#######-#" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <!-- EditText CINIC Ends -->

            <android.support.v7.widget.CardView
                android:id="@+id/psbipretest1cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cniccv"
                android:layout_marginTop="10sp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">


                <LinearLayout
                    android:id="@+id/ll_psbipretestq1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_psbipretestq1"
                        style="@style/TextView"
                        android:text="@string/psbitestq1" />


                    <RadioGroup style="@style/RadioGroup">

                        <RadioButton
                            android:id="@+id/rb_psbipretestq1a1"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq1a1" />

                        <RadioButton
                            android:id="@+id/rb_psbipretestq1a2"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq1a2" />

                        <RadioButton
                            android:id="@+id/rb_psbipretestq1a3"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq1a3" />

                        <RadioButton
                            android:id="@+id/rb_psbipretestq1a4"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq1a4" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/psbipretest2cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/psbipretest1cv"
                android:layout_marginTop="10sp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">


                <LinearLayout
                    android:id="@+id/ll_psbipretestq2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_psbipretestq2"
                        style="@style/TextView"
                        android:text="@string/psbitestq2" />


                    <RadioGroup style="@style/RadioGroup">

                        <RadioButton
                            android:id="@+id/rb_psbipretestq2a1"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq2a1" />

                        <RadioButton
                            android:id="@+id/rb_psbipretestq2a2"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq2a2" />

                        <RadioButton
                            android:id="@+id/rb_psbipretestq2a3"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq2a3" />

                        <RadioButton
                            android:id="@+id/rb_psbipretestq2a4"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq2a4" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/psbipretest3cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/psbipretest2cv"
                android:layout_marginTop="10sp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">


                <LinearLayout
                    android:id="@+id/ll_psbipretestq3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_psbipretestq3"
                        style="@style/TextView"
                        android:text="@string/psbitestq3" />


                    <RadioGroup style="@style/RadioGroup">

                        <RadioButton
                            android:id="@+id/rb_psbipretestq3a1"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq3a1" />

                        <RadioButton
                            android:id="@+id/rb_psbipretestq3a2"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq3a2" />

                        <RadioButton
                            android:id="@+id/rb_psbipretestq3a3"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq3a3" />

                        <RadioButton
                            android:id="@+id/rb_psbipretestq3a4"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq3a4" />

                    </RadioGroup>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/psbipretest4cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/psbipretest3cv"
                android:layout_marginTop="10sp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">


                <LinearLayout
                    android:id="@+id/ll_psbipretestq4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_psbipretestq4"
                        style="@style/TextView"
                        android:text="@string/psbitestq4" />


                    <RadioGroup style="@style/RadioGroup">

                        <RadioButton
                            android:id="@+id/rb_psbipretestq4a1"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq4a1" />

                        <RadioButton
                            android:id="@+id/rb_psbipretestq4a2"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq4a2" />

                        <RadioButton
                            android:id="@+id/rb_psbipretestq4a3"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq4a3" />

                        <RadioButton
                            android:id="@+id/rb_psbipretestq4a4"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq4a4" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/psbipretest5cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/psbipretest4cv"
                android:layout_marginTop="10sp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">


                <LinearLayout
                    android:id="@+id/ll_psbipretestq5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_psbipretestq5"
                        style="@style/TextView"
                        android:text="@string/psbitestq5" />


                    <RadioGroup style="@style/RadioGroup">

                        <RadioButton
                            android:id="@+id/rb_psbipretestq5a1"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq5a1" />

                        <RadioButton
                            android:id="@+id/rb_psbipretestq5a2"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq5a2" />

                        <RadioButton
                            android:id="@+id/rb_psbipretestq5a3"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq5a3" />

                        <RadioButton
                            android:id="@+id/rb_psbipretestq5a4"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq5a4" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/psbipretest6cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/psbipretest5cv"
                android:layout_marginTop="10sp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">


                <LinearLayout
                    android:id="@+id/ll_psbipretestq6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_psbipretestq6"
                        style="@style/TextView"
                        android:text="@string/psbitestq6" />


                    <RadioGroup style="@style/RadioGroup">

                        <RadioButton
                            android:id="@+id/rb_psbipretestq6a1"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq6a1" />

                        <RadioButton
                            android:id="@+id/rb_psbipretestq6a2"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq6a2" />

                        <RadioButton
                            android:id="@+id/rb_psbipretestq6a3"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq6a3" />

                        <RadioButton
                            android:id="@+id/rb_psbipretestq6a4"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq6a4" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/psbipretest7cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/psbipretest6cv"
                android:layout_marginTop="10sp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">


                <LinearLayout
                    android:id="@+id/ll_psbipretestq7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_psbipretestq7"
                        style="@style/TextView"
                        android:text="@string/psbitestq7" />

                    <RadioGroup style="@style/RadioGroup">

                        <RadioButton
                            android:id="@+id/rb_psbipretestq7a1"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq7a1" />

                        <RadioButton
                            android:id="@+id/rb_psbipretestq7a2"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq7a2" />

                        <RadioButton
                            android:id="@+id/rb_psbipretestq7a3"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq7a3" />

                        <RadioButton
                            android:id="@+id/rb_psbipretestq7a4"
                            style="@style/RadioButton"
                            android:text="@string/psbitestq7a4" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/psbipretest11cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/psbipretest7cv"
                android:layout_marginTop="10sp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <Button
                    android:id="@+id/btn_psbipretestsubmit"
                    style="@style/Button_collder"
                    android:layout_margin="10dp"
                    android:text="Submit" />

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </ScrollView>


</LinearLayout>
